--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,12 +8,10 @@ env:
   playstore_name: Frogobox ID
 
 on:
-
   push:
-    branches:
-      - 'release/**'
-
-  # Allows you to run this workflow manually from the Actions tab
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
   workflow_dispatch:
 
 jobs:
